<resources>
    <string name="app_name">Intent App Modified</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_activity_with_data">Pindah Activity dengan Data</string>
    <string name="move_activity_with_object">Pindah Activity dengan Data</string>
    <string name="dial_number">Call a Number</string>
    <string name="move_activity_with_result">Pindah Activity untuk result</string>
    <string name="result_with_activity">Pindah Activity dengan result</string>

    <string name="choose_number">Pilih angka yang Kamu suka</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="_300">300</string>
    <string name="_400">400</string>

    <string name="choose">Pilih</string>
    <string name="data_received">Data Received</string>
    <string name="data_received2">Data Received</string>
    <string name="data_received3">Data Received</string>
    <string name="data_received4">Data Received</string>
    <string name="data_received5">Data Received</string>
    <string name="object_received">Object Received</string>

    <string name="this_is_move_activity">Ini Pindah Activity</string>

</resources>